# mm-ready

./: .codacy.yaml  .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: architecture.md  checks-reference.md  index.md  quickstart.md  tutorial.md
mm_ready/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  connection.py  models.py  registry.py  scanner.py  schema_parser.py
mm_ready/checks/: base.py
mm_ready/checks/config/: idle_tx_timeout.py  parallel_apply.py  pg_minor_version.py  pg_version.py  shared_preload.py  spock_gucs.py  timezone_config.py  track_commit_ts.py
mm_ready/checks/extensions/: installed_extensions.py  lolor_check.py  pgstat_statements.py  snowflake_check.py
mm_ready/checks/functions/: stored_procedures.py  trigger_functions.py  views.py
mm_ready/checks/replication/: conflict_log.py  database_encoding.py  exception_log.py  hba_config.py  max_replication_slots.py  max_wal_senders.py  max_worker_processes.py  multiple_databases.py  repset_membership.py  stale_replication_slots.py  sub_health.py  wal_level.py
mm_ready/checks/schema/: column_defaults.py  deferrable_constraints.py  enum_types.py  event_triggers.py  exclusion_constraints.py  foreign_keys.py  generated_columns.py  identity_replica.py  inheritance.py  large_objects.py  missing_fk_indexes.py  multiple_unique_indexes.py  notify_listen.py  numeric_columns.py  partitioned_tables.py  primary_keys.py  row_level_security.py  rules.py  sequence_pks.py  tablespace_usage.py  temp_tables.py  unlogged_tables.py
mm_ready/checks/sequences/: sequence_audit.py  sequence_data_types.py
mm_ready/checks/sql_patterns/: advisory_locks.py  concurrent_indexes.py  ddl_statements.py  temp_table_queries.py  truncate_cascade.py
mm_ready/monitor/: log_parser.py  observer.py  pgstat_collector.py
mm_ready/reporters/: html_reporter.py  json_reporter.py  markdown_reporter.py
mm_ready/templates/: check_template.py
tests/: conftest.py  northwind_workload.sql  test_analyzer.py  test_cli.py  test_config.py  test_integration.py  test_models.py  test_registry.py  test_reporters.py  test_schema_parser.py  test_schema_setup.sql
