[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-ready"
version = "0.1.0"
description = "Database scanner for Spock 5 multi-master replication readiness"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary>=2.9",
    "pyyaml>=6.0",
]

[project.scripts]
mm-ready = "mm_ready.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.9", "pyright>=1.1"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["mm_ready*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modernize syntax for 3.10+)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "SIM108",  # ternary operator (not always clearer)
    "RUF012",  # ClassVar annotations (noisy for BaseCheck subclass patterns)
]

[tool.ruff.lint.isort]
known-first-party = ["mm_ready"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["mm_ready"]
exclude = ["tests"]
