[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mm-ready"
version = "0.1.2"
description = "Database scanner for Spock 5 multi-master replication readiness"
license = {file = "LICENSE.md"}
requires-python = ">=3.10"
readme = "README.md"
authors = [
    {name = "pgEdge, Inc"},
]
maintainers = [
    {name = "Antony Pegg", email = "ant@pgedge.com"},
]
keywords = ["postgresql", "multi-master", "replication", "spock", "compatibility"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: PostgreSQL License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
]
dependencies = [
    "psycopg2-binary>=2.9",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/AntTheLimey/MM_Ready"
Documentation = "https://github.com/AntTheLimey/MM_Ready/tree/main/docs"
"Issue Tracker" = "https://github.com/AntTheLimey/MM_Ready/issues"

[project.scripts]
mm-ready = "mm_ready.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.9", "pyright>=1.1", "types-psycopg2>=2.9", "interrogate>=1.7", "pytest-cov>=4.0", "pre-commit>=3.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["mm_ready*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modernize syntax for 3.10+)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",    # line too long (handled by formatter)
    "SIM108",  # ternary operator (not always clearer)
    "RUF012",  # ClassVar annotations (noisy for BaseCheck subclass patterns)
]

[tool.ruff.lint.isort]
known-first-party = ["mm_ready"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
include = ["mm_ready"]
exclude = ["tests"]
